--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
 										<div class="clearfix"></div>
 										<br /><hr />
 								</div>
+							</div>	
 								<div class="tab-4 resp-tab-content" aria-labelledby="tab_item-4">
 				<!-- contact -->
 									<div class="agile_about">
