--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 										
 										<div class="col-md-12">
 											<div class="col-md-9">
-												<h4><strong>Farm Animal Health site</strong></h4>
+												<h4><strong>Animal Health Care Portal</strong></h4>
 											</div>
 											<div class="col-md-3 text-right">
 												
