--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
 											<ul class="list-unstyled">
 												<li>	7.5 years of vast development experience in wide range of industries.
 </li>
+<li>
+	4+ years of experience in Node JS and Microsoft technologies. 
+	</li>
 <li>	Having 3+ years of experience with the CMS tool like Contentful and CrownPeak.
 </li>
 <li>	Having 2+ years of experience on deployment platform like Heroku(PaaS).
-</li>
-<li>	Experience in web development using Node JS and Microsoft Dot Net Technologies.
 </li>
 <li>	Involved in analysis, design, and development and testing of multi-tier client-server web-based enterprise applications.
 </li>
