--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 												<li>	7.5 years of vast development experience in wide range of industries.
 </li>
 <li>
-	4+ years of experience in Node JS and Microsoft technologies. 
+	Having 4+ years of experience in Node JS and Microsoft technologies. 
 	</li>
 <li>	Having 3+ years of experience with the CMS tool like Contentful and CrownPeak.
 </li>
